# aoc

./: .editorconfig  .gitignore  CLAUDE.md  COMPARISON.md  Cargo.toml  NEW_YEAR.md  README.md  aoc.opam  dune-workspace  justfile
.github/workflows/: ci.yml
2022/: .ocamlformat  README.md  aoc-2022.opam  dune-project  justfile
2022/1/: dune  main.ml
2022/common/: aoc-common-ocaml.opam  dune
2022/template/: dune  main.ml
2023/: Cargo.toml  README.md  justfile  new-day.sh
2023/1/: solve.py
2023/10/: Cargo.toml
2023/11/: Cargo.toml  input
2023/2/: solve.py
2023/3/: Cargo.toml  solve.py
2023/4/: Cargo.toml
2023/5/: Cargo.toml  ]
2023/6/: Cargo.toml
2023/7/: Cargo.toml
2023/8/: Cargo.toml
2023/9/: Cargo.toml
2023/common/: README.md
2024/: .clang-format  .clangd  Makefile  README.md  justfile  new-day.sh  run.sh
2024/.claude/: settings.local.json
2024/1/: Makefile  day_1  justfile  main.cpp
2024/2/: Makefile  justfile  main.cpp
2024/3/: Makefile  justfile  main.cpp  part_2.py  test
2024/4/: Makefile  day_4  justfile  main.cpp
2024/5/: justfile  main.cpp  solution.cpp
2024/6/: input  justfile  main.cpp  solution.cpp  solution.h
2024/7/: justfile  main.cpp  solution.cpp  solution.h
2024/8/: justfile  main.cpp  solution.cpp
2024/9/: justfile  main.cpp  solution.cpp
2024/common/: parse_input.cpp  parse_input.h
2024/cpp_utils/: parse_input.cpp  parse_input.h
2024/template/: justfile  main.cpp
2025/: README.md  justfile
_build/: .db  .digest-db  log
docs/: NEW_YEAR.md
scripts/: fetch-input.sh  progress.sh  stats.sh
(+75 files in other folders)
