opam-version: "2.3.0"
name: "aoc-2022"
version: "1.0.0"
synopsis: "Advent of Code 2022 solutions"
maintainer: "Antonio Braz <antonio@torreaobraz.com>"
authors: "Antonio Braz <antonio@torreaobraz.com>"
license: "MIT"
homepage: "https://github.com/atbraz/aoc"
depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "3.17.0"}
  "aoc-common"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
